2007-05-16	Ralf Corsepius <ralf.corsepius@rtems.org>

	* nsecs/init.c: Remove stray "volatile int i".

2007-05-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* base_sp/Makefile.am, hello/Makefile.am, iostream/Makefile.am,
	loopback/Makefile.am, nsecs/Makefile.am,
	pppd/Makefile.am, ticker/Makefile.am, ticker/system.h,
	unlimited/Makefile.am: Add optional managers to Makefiles. Clean up
	test cases so last output line follows END OF pattern. Make sure test
	case all run. All tests appeared ok on sis.
	* nsecs/init.c: Commit hack so test will compile when POSIX is
	disabled.  Remove hack when clock_gettime() is present even when
	--disable-posix.

2007-05-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* ticker/Makefile.am, ticker/init.c, ticker/system.h, ticker/tasks.c:
	Test needs clock manager. Should use rtems_test_exit() instead of
	exit().

2007-05-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* minimum/Makefile.am, minimum/init.c: Switch back to using optional
	manager support. Also add use of CONFIGURE_DISABLE_NEWLIB_REENTRANCY
	to demonstrate that the newlib reentrancy support is optional.

2007-04-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* nsecs/init.c: Remove private decl of _Timespec_Subtract use the
	  version from rtems/score/timespec.h.

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* nsecs/init.c: Provide timespec manipulation routines in the
	SuperCore. Use them everywhere possible. Perhaps they should be part
	of the public API so this test and others can use them without
	peeking into the bowels.

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* loopback/init.c: Change all obsoleted CONFIGURE_TEST_NEEDS_XXX
	configuration constants to CONFIGURE_APPLICATION_NEEDS_XXX.

2007-04-02	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am, configure.ac: Convert from Classic API style TOD_Control
	as fundamental time structure to POSIX struct timespec. Add
	clock_get_uptime().
	* nsecs/.cvsignore, nsecs/Makefile.am, nsecs/init.c, nsecs/nsecs.doc,